check refresh working
