# schema/swagger.yml
@@ -199,39 +199,6 @@ paths:
           description: ok
           schema:
             $ref: "#/definitions/metrics"
-  /refresh:
-    post:
-      consumes:
-        - application/x-www-form-urlencoded
-      produces:
-        - application/json
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      parameters:
-        - type: string
-          name: access_token
-          in: query
-          required: false
-          description: "access token"
-        - type: string
-          name: refresh_token
-          in: query
-          required: false
-          description: "refresh token"
-      responses:
-        '200':
-          description: "get client id and client secret"
-          schema:
-            "$ref": "#/definitions/token"
-        '500':
-          description: "When some error occurs"
-          schema:
-            "$ref": "#/definitions/error"
-      tags:
-        - public
-      summary: "This API endpoint create, store and returns credentials for new user"
   /google/login:
     get:
       produces:
@@ -401,6 +368,7 @@ definitions:
         type: string
     required:
       - access_token
+      - refresh_token
       - expires_in
       - scope
       - token_type
